[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "rnet-client"
version = "0.0.4"
description = "wreq client wrapper"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "wreq>=0.11.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/imbecility/rnet-client"
